<resources>
    <string name="app_name">Restaurant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="desks">Desks</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="client_id">Client ID</string>
    <string name="restaurant_id">Restaurant ID</string>
    <string name="your_products">Your products</string>
    <string name="submit">Submit</string>
    <string name="title_activity_update_purchase">UpdatePurchaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="done">DONE</string>
    <string name="processing">PROCESSING</string>
    <string name="open">OPEN</string>
    <string name="price_25"><![CDATA[Price > 25]]></string>
    <string name="price_50"><![CDATA[Price >50]]></string>
    <string name="price_75"><![CDATA[Price > 75]]></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="user_name">User name</string>
    <string name="remember_me">Remember me</string>
    <string name="welcome_login">Welcome</string>
    <string name="pref_file_key">pref_file_key</string>
    <string name="pref_is_user_login">false</string>
    <string name="pref_name_of_user">nameofuser</string>
    <string name="pref_id_of_user">id</string>
    <string name="enter_an_id">Enter an id...</string>
    <string name="order_amp_eat"><![CDATA[Order & Eat]]></string>
    <string name="add">+ Add</string>
    <string name="total_price">Total Price:</string>
    <string name="_0">0€</string>
    <string name="delivery_price">Delivery Price:</string>
    <string name="products_price">Products Price:</string>
    <string name="my_cart">My Cart</string>
    <string name="pref_email_of_user">email</string>
    <string name="title_activity_update_address">UpdateAddressActivity</string>
    <string name="your_orders_is_here">Your orders is here</string>
    <string name="pref_phone_of_user">phone_number</string>
    <string name="pref_address_of_user">address</string>
    <string name="accept">Accept</string>
</resources>