<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_app"
        tools:context=".activities.UpdatePurchaseActivity">

    <com.google.android.material.button.MaterialButton
            app:cornerRadius="20dp"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteOrderBtn"
            app:backgroundTint="#33EAA9"
            android:textColor="#000000"
            app:icon="@drawable/ic_baseline_delete_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:iconTint="#000000"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="15dp" />

    <com.google.android.material.button.MaterialButton
            app:cornerRadius="20dp"
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#33EAA9"
            android:textColor="#000000"
            android:id="@+id/updateOrderBtn"
            app:icon="@drawable/ic_baseline_update_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:iconTint="#000000"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/select"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
                android:id="@+id/orderAutoStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>