<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/clMain"
        tools:context=".activities.CreateOrderActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@android:drawable/ic_menu_edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/logoRestaurant">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurantIdEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@android:drawable/ic_menu_edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonName"
            android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/restaurant"
            android:id="@+id/logoRestaurant"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:layout_constraintHorizontal_bias="0"
            app:srcCompat="@drawable/restaurant" />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonName"
            android:layout_marginTop="350dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="200dp"
            android:id="@+id/linearLayout">

        <TextView
                android:text="@string/your_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/yourProducts"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:gravity="center" />

        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/productListView" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
            app:cornerRadius="20dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            app:backgroundTint="#33EAA9"
            android:id="@+id/submit"
            android:textSize="12sp"
            android:textColor="#000000"
            android:text="@string/submit" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalPriceCreated"
            app:layout_constraintBottom_toTopOf="@+id/submit"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>