<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/background_app"
        tools:context=".login.login.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_security_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLayout2"
            android:textColorHint="#535353"
            app:startIconTint="#535353"
            app:boxStrokeColor="@color/colors_log"
            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopStart="27dp"
            app:layout_constraintBottom_toTopOf="@+id/rememberMe"
            android:layout_marginBottom="40dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:imeActionLabel="@string/action_sign_in_short"
                android:textColor="#494E57" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLayout3"
            app:startIconTint="#535353"
            android:textColorHint="#535353"
            app:boxStrokeColor="@color/colors_log"
            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopStart="27dp"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColor="#494E57" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            app:cornerRadius="100dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="#494E57"
            android:id="@+id/loginBtn"
            android:textSize="12sp"
            android:textColor="#000000"
            app:layout_constraintHorizontal_bias="1.0"
            android:enabled="false"
            app:layout_constraintStart_toEndOf="@+id/rememberMe"
            app:icon="@drawable/ic_baseline_east_24"
            app:iconPadding="0dp"
            app:iconTint="#FFFFFF"
            android:isScrollContainer="false"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toTopOf="@+id/toRegisterActivityBtn"
            android:layout_marginBottom="28dp" />

    <CheckBox
            android:text="@string/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/rememberMe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="#494E57"
            android:buttonTint="#494E57"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            android:layout_marginBottom="40dp" />

    <TextView
            android:text="@string/welcome_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="44dp"
            android:textSize="36sp"
            android:textColor="#494E57"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.864" />

    <TextView
            android:text="Don't have an account yet?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="#494E57"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp" />

    <TextView
            android:text="Sign In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toRegisterActivityBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:textSize="20sp"
            android:textColor="#455878"
            android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>