<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="Your Cart Is Empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emptyCartAlertTxt"
                app:layout_constraintTop_toTopOf="@+id/cartScrollView"
                app:layout_constraintEnd_toEndOf="@+id/cartScrollView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                android:textSize="35sp"
                android:textStyle="bold" />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cartScrollView">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:id="@+id/linearLayoutCart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:text="@string/my_cart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:id="@+id/textView3"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toTopOf="@+id/cartRecyclerView"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                android:layout_marginTop="32dp" />

                        <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="0dp"
                                android:layout_height="390dp"
                                android:id="@+id/cartRecyclerView"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textView3"
                                android:layout_marginTop="16dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp">

                        </androidx.recyclerview.widget.RecyclerView>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="16dp">

                        <TextView
                                android:text="@string/products_price"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"
                                android:id="@+id/textView8"
                                android:layout_weight="1" />

                        <TextView
                                android:text="@string/_0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"
                                android:id="@+id/totalProductPriceCart" />

                    </LinearLayout>

                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp">

                        <TextView
                                android:text="@string/delivery_price"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"
                                android:id="@+id/textView12"
                                android:layout_weight="1" />

                        <TextView
                                android:text="@string/_0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"
                                android:id="@+id/deliveryPrice" />
                    </LinearLayout>

                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp">

                        <TextView
                                android:text="@string/total_price"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textSize="28sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"
                                android:id="@+id/textView13"
                                android:layout_weight="1" />

                        <TextView
                                android:text="@string/_0"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="28sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"
                                android:id="@+id/totalOrderPriceCart" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                            app:cornerRadius="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            app:backgroundTint="#FF8B55"
                            android:id="@+id/submitBtn"
                            android:textSize="20sp"
                            android:textColor="#FFFFFF"
                            android:text="@string/submit"
                            android:layout_margin="16dp"
                            app:elevation="3dp"
                            android:textStyle="bold"
                            android:textAllCaps="false" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>