<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/registerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/background_app"
        tools:context=".login.login.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_security_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLayout2"
            android:textColorHint="#494E57"
            app:startIconTint="#494E57"
            app:boxStrokeColor="@color/colors_reg"
            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopStart="27dp"
            app:layout_constraintBottom_toTopOf="@+id/confirmRegistrationBtn"
            android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:imeActionLabel="@string/action_sign_in_short"
                android:textColor="#494E57" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLayout4"
            android:textColorHint="#494E57"
            app:startIconTint="#494E57"
            app:boxStrokeColor="@color/colors_reg"
            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopStart="27dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="User name"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:textColor="#494E57" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLayout3"
            android:textColorHint="#494E57"
            app:startIconTint="#494E57"
            app:boxStrokeColor="@color/colors_reg"
            app:boxCornerRadiusBottomEnd="27dp"
            app:boxCornerRadiusTopEnd="27dp"
            app:boxCornerRadiusBottomStart="27dp"
            app:boxCornerRadiusTopStart="27dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
            android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColor="#494E57" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            app:cornerRadius="100dp"
            android:layout_width="75dp"
            android:layout_height="85dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="#494E57"
            android:id="@+id/confirmRegistrationBtn"
            android:textSize="12sp"
            android:textColor="#000000"
            android:enabled="false"
            app:icon="@drawable/ic_baseline_east_24"
            app:iconPadding="0dp"
            app:iconTint="#FFFFFF"
            android:isScrollContainer="false"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toTopOf="@+id/registerProgressBar"
            android:layout_marginBottom="60dp" />

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:progressTint="#494E57" />


</androidx.constraintlayout.widget.ConstraintLayout>